recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:4: error: not found: value liste
     liste = l.head::butLast(l.tail)
     ^ButLast:6: error: not found: value liste
  else return liste
              ^