recursion.cons.butlast.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
  if ((l.tail).tail!=Nil) {
     liste = l.head::butLast(l.tail)
  }
  else return liste
}